<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_main"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.notas.MainActivity"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

       <LinearLayout
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="match_parent"
           android:orientation="vertical">

           <TextView style="@style/StyleTextView"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/Practicas60"
               android:textColor="@color/black"
               android:background="@color/greenyellow"
               android:textStyle="bold"/>
           <TextView style="@style/StyleTextView"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/avanze"
               android:textColor="@color/black"
               android:background="@color/greenyellow"
               android:textStyle="bold"/>
           <TextView style="@style/StyleTextView"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/avanze2"
               android:textColor="@color/black"
               android:background="@color/greenyellow"
               android:textStyle="bold"/>
           <TextView style="@style/StyleTextView"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/avanze3"
               android:textColor="@color/black"
               android:background="@color/greenyellow"
               android:textStyle="bold"/>
           <TextView style="@style/StyleTextView"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/aplicacionfinal"
               android:textColor="@color/black"
               android:background="@color/greenyellow"
               android:textStyle="bold"/>


       </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText style="@style/StyleEditText"
                android:id="@+id/eNotapract"
                android:hint="@string/ingnota"/>
            <EditText style="@style/StyleEditText"
                android:id="@+id/eProyecto1"
                android:hint="@string/ingnota"/>

            <EditText style="@style/StyleEditText"
                android:id="@+id/eProyecto2"
                android:hint="@string/ingnota"/>
            <EditText style="@style/StyleEditText"
                android:id="@+id/eProyecto3"
                android:hint="@string/ingnota"/>
            <EditText style="@style/StyleEditText"
                android:id="@+id/eAplicacion"
                android:hint="@string/ingnota"/>




        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="CALCULAR NOTA"
            android:layout_gravity="center"
            android:background="@color/darkslategray"
            android:textColor="@color/white"
            android:id="@+id/bCalcular"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:id="@+id/tNotaf"
            android:textAlignment="center"
            android:background="@color/greenyellow"
            android:textColor="@color/black"
            />



    </LinearLayout>








</LinearLayout>
